[gd_scene load_steps=7 format=3 uid="uid://dgp10l27pqr3c"]

[ext_resource type="Script" path="res://MainGame/Characters/Players/TestPlayer/Scripts/place_holder_player.gd" id="1_c3y1h"]
[ext_resource type="Resource" uid="uid://bretvu3orawxs" path="res://MainGame/Characters/Players/PlayerRes/PlayerResources.tres" id="2_r1j5k"]
[ext_resource type="PackedScene" uid="uid://b1rldem7467nm" path="res://MainGame/Characters/Players/TestPlayer/Assets/jazzmodel.tscn" id="2_u01sa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kb1pt"]
radius = 0.3
height = 1.6497

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eoec2"]
transparency = 1
albedo_color = Color(1.77647, 3.55294, 0, 0.207843)

[sub_resource type="SphereMesh" id="SphereMesh_u1le0"]
material = SubResource("StandardMaterial3D_eoec2")
radius = 0.1
height = 0.3

[node name="PlaceHolderPlayer" type="CharacterBody3D"]
script = ExtResource("1_c3y1h")
metadata/PlayerInfo = ExtResource("2_r1j5k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.42328, 0, 0, 0, 1.42328, 0, 0, 0, 1.42328, 0, 0.852328, 0)
shape = SubResource("CapsuleShape3D_kb1pt")

[node name="PlayerColl" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlayerColl"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586781, 0)
shape = SubResource("CapsuleShape3D_kb1pt")

[node name="JazzModel" parent="." instance=ExtResource("2_u01sa")]
transform = Transform3D(0.462976, 0, 0, 0, 0.462976, 0, 0, 0, 0.462976, 0, -0.365773, 0)

[node name="RunParticles" type="CPUParticles3D" parent="JazzModel"]
transform = Transform3D(2.15994, 0, 0, 0, 2.15994, 0, 0, 0, 2.15994, 0, 2.77838, -1.60038)
emitting = false
amount = 10
preprocess = 1.26
speed_scale = 4.22
explosiveness = 0.12
randomness = 0.19
lifetime_randomness = 0.06
mesh = SubResource("SphereMesh_u1le0")
emission_shape = 3
emission_box_extents = Vector3(0.8, 0.8, 0.8)
gravity = Vector3(0, 0, 0)

[node name="cam" type="Node3D" parent="."]

[node name="SpringArm3D" type="SpringArm3D" parent="cam"]
transform = Transform3D(1, 0, 0, 0, 0.996195, -0.0871557, 0, 0.0871557, 0.996195, 0, 2, 3)
collision_mask = 7
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="cam/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.962004, 0.273036, 0, -0.273036, 0.962004, 0, 0, 0)

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.64575, 0.611189, 0.0803898)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitCoolDown" type="Timer" parent="."]

[connection signal="area_entered" from="PlayerColl" to="." method="_on_player_coll_area_entered"]
